k8s-resources/istio-booksite-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookinfo
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - http:
        paths:
        - path: /productpage
          backend:
            serviceName: productpage
            servicePort: 9080
        - path: /login
          backend:
            serviceName: productpage
            servicePort: 9080
        - path: /logout
          backend:
            serviceName: productpage
            servicePort: 9080
        - path: /static
          pathType: Prefix
          backend:
            serviceName: productpage
            servicePort: 9080
